# kkRWKV

./: README.md  pyproject.toml
kkRWKV/: block.py  dataset.py  metrics.py  model.py  trainer.py
kkRWKV/cuda/: README.md
tests/: test.py
